# roguelike-sprawl

./: .gitignore  AGENTS.md  COMMIT_MSG_2026-07-13.txt  GRAPHIC_NOVEL_ARCHITECTURE_ANALYSIS.md  IMPROVEMENTS.md  LICENSE  README.md  ROADMAP.md  SESSION_HANDOVER.md  SESSION_SUMMARY.md  SESSION_SUMMARY_2026-07-11.md  SESSION_SUMMARY_2026-07-12.md  SESSION_SUMMARY_2026-07-13.md  SETUP_LOG.md  achievements.html  index.md  log.md  mkdocs.yml  settings.html  sound.html  stages.html  stories.html
prototype/: .editorconfig  .gitignore  CHANGELOG.md  CONTROLS.md  DEMO_GUIDE.md  DUNGEON_NPC_GUIDE.md  INTERACTIVE_GUIDE.md  Makefile  QUICK_START.md  README.md  SOUND_PLAN.md  STATUS_PANEL_GUIDE.md  VISUAL_GUIDE.md  pyproject.toml
prototype/.github/workflows/: ci.yml  cross-project-integrity.yml  release.yml
prototype/data/: game_facts.json
prototype/data/animations/: frames.json
prototype/data/combat/: ice_types.json
prototype/data/crafting/: market.json  materials.json  recipes.json
prototype/data/cyberspace/: worlds.json
prototype/data/fonts/: README.md
prototype/data/i18n/: en.json  ja.json  ko.json  zh.json
prototype/data/jockeys/: deceased.json  deceased_demo.json
prototype/data/missions/: missions.json
prototype/data/portraits/: portraits.json
prototype/data/programs/: programs.json
prototype/data/saves/: gn_progress.json  gn_progress_slot_1.json  gn_progress_slot_2.json  (+1 more)
prototype/saves/: slot_1.json
prototype/scripts/: README.md  boss_ice_demo.py  combat_effects_demo.py  combat_grades.py  combat_grades_demo.py  combat_simulator.py  death_demo.py  death_in_action_demo.py  demo.py  demo_all.py  demo_avatar.py  demo_cinematic_art.py  demo_full_flow.py  demo_minimax_bgms.py  demo_sound_keys.py  demo_sounds.py  download_font.py  ending_b_demo.py  ending_c_demo.py  full_demo.py  full_demo_sound.py  generate_story_html.py  graphic_novel.py  headless_sound_demo.py  play.py  play_arc_bsp.py  play_arc_chapter.py  play_arc_phase.py  play_dungeon_mode.py  play_ecs_dungeon.py  play_mission_mapping.py  play_novel_runtime.py  play_vfx_overlay.py  prologue.py  test_sound_libraries.py  test_tcod.py  text_demo.py  text_visibility_demo.py  upgrade_sounds.py  verification_report.json  (+7 more)
prototype/tests/: conftest.py
(+1028 files in other folders)
