[project]
name = "roguelike-sprawl"
version = "1.0.0-alpha.1"
description = "Roguelike game based on William Gibson's Sprawl trilogy"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Emilio" },
]
keywords = ["roguelike", "cyberpunk", "gibson", "cyberspace"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Games/Entertainment :: Role-Playing",
]
dependencies = [
    "tcod>=16.0",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
roguelike-sprawl = "roguelike_sprawl.engine.app:main"
rs = "roguelike_sprawl.engine.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/roguelike_sprawl"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PT"]
ignore = [
    "E501",  # line-too-long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "A"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/roguelike_sprawl"]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/roguelike_sprawl"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 30
# Goal: 80%+ coverage. Currently ~38% (data-driven modules are untested in unit tests).
# Tracked in Issue: "increase unit test coverage"
